SplitView: hiding scrollbars for correct size calculation on resize

--- a/src/themes/default/kd.styl
+++ b/src/themes/default/kd.styl
@@ -85,6 +85,13 @@ h4.kdheaderview
 /*
 **  KDSplitView STYLES
 */
+body.resize-in-action
+  overflow          hidden !important
+
+  .kdsplitview
+  .kdsplitview-panel
+    overflow        hidden !important
+
 .kdsplitview
 
   .kdsplitview-panel
